tests/negative/bad_export5.toit
// Copyright (C) 2020 Toitware ApS. All rights reserved.

// Empty on purpose.
